--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -22,10 +22,17 @@
 	background-color: #fff;
 	border-radius: 5px;
 	border: 1px solid $redColor;
+	transition: all 0.3s ease 0s;
 
 	&:hover {
 		color: #fff;
 		background-color: $redColor;
 		border: 1px solid #fff;
 	}
+}
+
+.title {
+	@include adaptiveValue("font-size", 60, 50);
+	margin-bottom: 25px;
+	text-align: center;
 }
