--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -5,7 +5,6 @@
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	margin-bottom: 200px;
 
 	&__header {}
 
@@ -41,5 +40,108 @@
 	}
 }
 
+// about ====================================================================================================
+.about {
+	@include adaptiveValue("padding-top", 60, 40);
 
-//====================================================================================================
+	&__row {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__card {
+		flex: 0 1 48%;
+		background-color: rgb(245, 245, 245);
+		padding: 20px;
+		border-radius: 15px;
+		margin-right: 30px;
+		margin-top: 20px;
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+
+	&__card-text {
+		font-weight: 400;
+
+		p {
+			line-height: 140%;
+			margin-bottom: 30px;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+// service ========================================================================================================================================================
+.service {
+	margin-top: 60px;
+	position: relative;
+	@include adaptiveValue("padding-top", 80, 40);
+	@include adaptiveValue("padding-bottom", 100, 40);
+
+	&::before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: url(../img/bg.png) no-repeat;
+	}
+
+	&__title {
+		z-index: 2;
+		position: relative;
+	}
+
+	&__row {
+		margin-top: 40px;
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__card {
+		text-align: center;
+		flex: 0 0 24%;
+		background-color: #fff;
+		z-index: 2;
+
+		@media (max-width:$tablet) {
+			flex: 0 1 48%;
+		}
+
+		@media (max-width:$mobile) {
+			flex: 1 1 auto;
+		}
+	}
+
+	&__card-img {
+		padding: 7px;
+		max-width: 100%;
+		margin: auto;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__card-title {
+		margin: 20px 0 20px 0;
+		font-size: 24px;
+		font-weight: 600;
+	}
+
+	&__card-text {
+		font-size: 18px;
+		line-height: 140%;
+		padding-bottom: 47px;
+	}
+}
