--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -58,6 +58,11 @@
 		margin-right: 30px;
 		margin-top: 20px;
 
+		@media (max-width:$tablet) {
+			flex: 1 1 auto;
+			margin-right: 0;
+		}
+
 		&:last-child {
 			margin-right: 0;
 		}
@@ -123,25 +128,114 @@
 
 	&__card-img {
 		padding: 7px;
-		max-width: 100%;
-		margin: auto;
+		width: 100%;
+		display: flex;
+		justify-content: center;
 
 		img {
 			width: 100%;
-			height: 100%;
-			object-fit: cover;
 		}
 	}
 
 	&__card-title {
 		margin: 20px 0 20px 0;
 		font-size: 24px;
-		font-weight: 600;
+		font-weight: 700;
 	}
 
 	&__card-text {
 		font-size: 18px;
 		line-height: 140%;
 		padding-bottom: 47px;
+	}
+}
+
+// industry ========================================================================================================================================================
+.industry {
+	@include adaptiveValue("padding-top", 80, 40);
+	@include adaptiveValue("padding-bottom", 100, 40);
+
+	&__row {
+		margin-top: 50px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+
+		@media (max-width:$tablet) {
+			justify-content: center;
+		}
+	}
+
+	&__card {
+		flex: 0 1 48%;
+		margin-bottom: 40px;
+
+		@media (max-width:$tablet) {
+			flex: 0 1 40%;
+			margin-right: 20px;
+			justify-content: space-between;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+
+		@media (max-width:$mobile) {
+			flex: 1 1 auto;
+			justify-content: center;
+			margin-right: 0;
+		}
+	}
+
+	&__card-image {
+		max-width: 542px;
+		max-height: 351px;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	&__card-title {
+		margin-top: 20px;
+		font-size: 24px;
+		font-weight: 400;
+	}
+}
+
+// contact ========================================================================================================================================================
+.contact {
+	background-color: #f5f5f5;
+	@include adaptiveValue("padding-top", 100, 40);
+	@include adaptiveValue("padding-bottom", 100, 40);
+
+	&__row {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		font-weight: 400;
+	}
+
+	&__title {
+		font-size: 48px;
+		line-height: 140%;
+	}
+
+	&__text {
+		font-size: 20px;
+		margin-bottom: 30px;
+	}
+
+	&__mail {
+		margin-bottom: 30px;
+	}
+
+	&__btn {
+		display: inline-flex;
+		text-align: center;
+		display: block;
+		width: 185px;
+		margin: auto;
 	}
 }
