--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -53,10 +53,10 @@ $responsiveType: 1;
 body {
 
 	// Скролл заблокирован
-	.lock & {
-		overflow: hidden;
-		touch-action: none;
-	}
+	// .lock & {
+	// 	overflow: hidden;
+	// 	touch-action: none;
+	// }
 }
 
 // Оболочка ============================================================================================================================================================================================================================================================================================================================================================================================================================================
