--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,7 +20,7 @@ $fontSize: rem(18); // где 14(px) - размер шрифта по умолч
 
 // Основные цвета
 $mainColor: #111; // Цвет шрифта по умолчанию
-$redColor: #F44336;
+$redColor: #fa2919;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
