--- a/src/scss/base/forms/input.scss
+++ b/src/scss/base/forms/input.scss
@@ -19,7 +19,7 @@ textarea {
 	height: 40px;
 	font-size: 15px;
 	font-weight: 400;
-	margin-bottom: 20px;
+	margin-bottom: 14px;
 	border-radius: 4px;
 
 	&._focus {}
@@ -32,7 +32,7 @@ textarea {
 
 textarea.input {
 	resize: none;
-	padding: 10px 20px;
+	padding: 10px 13px;
 	height: 120px;
 }
 
@@ -64,6 +64,10 @@ textarea.input {
 	align-items: center;
 	flex-wrap: wrap;
 	margin-bottom: 20px;
+
+	@media (max-width:$mobile) {
+		max-width: 100%;
+	}
 }
 
 .field__file-fake {
