--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -1,6 +1,6 @@
 body::after {
 	content: "";
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.6);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -33,6 +33,10 @@ body::after {
 		text-align: center;
 		margin-bottom: 40px;
 		font-weight: 600;
+
+		@media (max-width:$mobile) {
+			margin-bottom: 18px;
+		}
 	}
 }
 
@@ -62,6 +66,7 @@ body::after {
 }
 
 .popup__content {
+	position: relative;
 	visibility: hidden;
 	transform: scale(0);
 	transition: transform 0.3s ease 0s;
@@ -70,7 +75,13 @@ body::after {
 	width: 100%;
 	margin: auto;
 	max-width: 718px;
-	border-radius: 20px;
+	border-radius: 6px;
+	box-shadow: 0 3px 30px rgb(0 0 0 / 50%);
+
+	@media (max-width:$mobile) {
+		padding: 20px;
+		width: 80%;
+	}
 
 	.lock & {
 		visibility: visible;
@@ -86,4 +97,21 @@ body::after {
 		display: block;
 		margin: auto;
 	}
+}
+
+.popup__button {
+	@media (max-width:$mobile) {
+		padding: 15px 50px !important;
+		margin-bottom: 30px;
+	}
+}
+
+.popup__crest {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	top: -30px;
+	right: -30px;
+	font-size: 25px;
+	color: #fff;
 }
