--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,21 +1,29 @@
 //====================================================================================================
 .main {
 	background: #FAFAFA;
-	padding: 40px 0;
+	padding: 40px 0 50px;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 
-	&__header {}
+	@media (max-width:$mobile) {
+		padding: 30px 0 40px 0;
+	}
 
 	&__logo {
 		width: 146px;
+		height: 170px;
 		margin: auto;
+		margin-bottom: 20px;
+
+		@media (max-width:$mobile) {
+			width: 114px;
+			height: auto;
+		}
 
 		img {
 			width: 100%;
 			height: 100%;
-			margin-bottom: 30px;
 		}
 	}
 
@@ -51,25 +59,29 @@
 	}
 
 	&__card {
-		flex: 0 1 48%;
+		flex: 0 1 49%;
 		background-color: rgb(245, 245, 245);
 		padding: 20px;
 		border-radius: 15px;
-		margin-right: 30px;
-		margin-top: 20px;
+		margin-right: 10px;
+		margin-top: 32px;
 
 		@media (max-width:$tablet) {
 			flex: 1 1 auto;
-			margin-right: 0;
+			margin: 20px 30px 0 30px;
 		}
 
 		&:last-child {
-			margin-right: 0;
+			// margin: 20px 30px 0 30px;
 		}
 	}
 
 	&__card-text {
 		font-weight: 400;
+
+		@media (max-width:$tablet) {
+			font-size: 14px;
+		}
 
 		p {
 			line-height: 140%;
@@ -109,6 +121,10 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
+
+		@media (max-width:$mobile) {
+			justify-content: center;
+		}
 	}
 
 	&__card {
@@ -122,18 +138,24 @@
 		}
 
 		@media (max-width:$mobile) {
-			flex: 1 1 auto;
+			flex: 0 1 330px;
 		}
 	}
 
 	&__card-img {
 		padding: 7px;
-		width: 100%;
+		max-width: 100%;
+		object-fit: contain;
 		display: flex;
 		justify-content: center;
+		text-align: center;
 
 		img {
 			width: 100%;
+
+			@media (max-width:$mobile) {
+				width: 257px;
+			}
 		}
 	}
 
@@ -147,13 +169,18 @@
 		font-size: 18px;
 		line-height: 140%;
 		padding-bottom: 47px;
+		margin: 0 7px;
+
+		@media (max-width:$mobile) {
+			font-size: 16px;
+		}
 	}
 }
 
 // industry ========================================================================================================================================================
 .industry {
-	@include adaptiveValue("padding-top", 80, 40);
-	@include adaptiveValue("padding-bottom", 100, 40);
+	@include adaptiveValue("padding-top", 80, 20);
+	@include adaptiveValue("padding-bottom", 60, 40);
 
 	&__row {
 		margin-top: 50px;
@@ -167,7 +194,7 @@
 	}
 
 	&__card {
-		flex: 0 1 48%;
+		flex: 0 1 49%;
 		margin-bottom: 40px;
 
 		@media (max-width:$tablet) {
@@ -189,11 +216,20 @@
 
 	&__card-image {
 		max-width: 542px;
-		max-height: 351px;
+		max-width: 100%;
+
+		@media (max-width:$tablet) {
+			text-align: center;
+		}
 
 		img {
 			width: 100%;
 			height: 100%;
+
+			@media (max-width:$mobile) {
+				width: 330px;
+				text-align: center;
+			}
 		}
 	}
 
@@ -201,6 +237,10 @@
 		margin-top: 20px;
 		font-size: 24px;
 		font-weight: 400;
+
+		@media (max-width:$mobile) {
+			text-align: center;
+		}
 	}
 }
 
@@ -224,18 +264,26 @@
 
 	&__text {
 		font-size: 20px;
-		margin-bottom: 30px;
+		margin-bottom: 25px;
+
+		@media (max-width:$mobile) {
+			font-size: 16px;
+			line-height: 140%;
+		}
 	}
 
 	&__mail {
-		margin-bottom: 30px;
+		margin-bottom: 25px;
 	}
 
 	&__btn {
 		display: inline-flex;
 		text-align: center;
 		display: block;
-		width: 185px;
 		margin: auto;
+		padding: 15px 27px;
+		font-weight: 400;
+		font-style: normal;
+		font-size: 20px;
 	}
 }
