--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -287,3 +287,63 @@
 		font-size: 20px;
 	}
 }
+
+
+// хуки 
+#cookie_note {
+	display: none;
+	position: fixed;
+	bottom: 25px;
+	left: 50%;
+	max-width: 100%;
+	transform: translateX(-50%);
+	padding: 20px;
+	background-color: #ededed;
+	border-radius: 4px;
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.4);
+}
+
+#cookie_note p {
+	margin: 0;
+	font-size: 13px;
+	text-align: left;
+	line-height: 140%;
+}
+
+.cookie_accept {
+	width: 30%;
+}
+
+.button__cookie {
+	width: 320px;
+	height: 40px;
+	text-align: center;
+	border-radius: 0px;
+	// padding: 16px 24px;
+	background-color: #FA2919;
+	color: #FFFFFF;
+	cursor: pointer;
+	font-size: 13px;
+	display: inline-block;
+	border: none;
+	margin-left: 20px;
+
+	@media (max-width:$mobile) {
+		margin-left: 0;
+		margin-top: 20px;
+	}
+}
+
+@media (min-width: 576px) {
+	#cookie_note.show {
+		display: flex;
+		align-items: center;
+	}
+}
+
+@media (max-width: 575px) {
+	#cookie_note.show {
+		display: block;
+		text-align: left;
+	}
+}
